--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00:00</h2>
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
+    <p>
+    <div id="quote">
+      <span></span><br>
+      <span></span>
+    </div>
+    <p>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter">
+    </form>
+    <ul id="todo-list"></ul>
+    <script src="js/global_variable.js"></script>
     <script src="js/grettings.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
