--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
       <span></span>
       <span></span>
     </div>
-    <p>
+    <p></p>
     <div id="quote">
-      <span></span><br>
+      <span></span><br />
       <span></span>
     </div>
-    <p>
+    <p></p>
     <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter">
+      <input type="text" placeholder="Write a To Do and Press Enter" />
     </form>
-    <ul id="todo-list"></ul>
+    <div>
+      <ul id="todo-list"></ul>
+    </div>
     <script src="js/global_variable.js"></script>
     <script src="js/grettings.js"></script>
     <script src="js/clock.js"></script>
