--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="weather">
       <span></span>
       <span></span>
+      <span></span>
     </div>
     <p></p>
     <div id="quote">
@@ -30,11 +31,18 @@
       <span></span>
     </div>
     <p></p>
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter" />
-    </form>
-    <div>
-      <ul id="todo-list"></ul>
+    <div id="todos">
+      <form id="todo-form">
+        <input
+          type="text"
+          required
+          size="22"
+          placeholder="Write a To Do and Press Enter"
+        />
+      </form>
+      <div>
+        <ul id="todo-list"></ul>
+      </div>
     </div>
     <script src="js/global_variable.js"></script>
     <script src="js/grettings.js"></script>
